# agent-safety-mcp

./: README.md  pyproject.toml
src/agent_safety_mcp/: __init__.py  server.py
