[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-safety-mcp"
version = "0.1.0"
description = "MCP server for AI agent safety — cost guards, injection scanning, and decision tracing"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "LuciferForge" },
]
keywords = ["mcp", "ai-safety", "cost-guard", "prompt-injection", "tracing", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Security",
]
dependencies = [
    "mcp>=1.0.0",
    "ai-cost-guard>=0.1.0",
    "ai-injection-guard>=0.1.0",
    "ai-decision-tracer>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/LuciferForge/agent-safety-mcp"
Repository = "https://github.com/LuciferForge/agent-safety-mcp"

[project.scripts]
agent-safety-mcp = "agent_safety_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_safety_mcp"]
